--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html":"^5.2.0",
-        "laracasts/flash":"3.0.2"
+        "laracasts/flash":"3.0.2",
+        "phpoffice/phpword": "v0.14.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
