migraciones para heroku

--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_PORT=5432
 DB_DATABASE=pay
-DB_USERNAME=root
+DB_USERNAME=postgres
 DB_PASSWORD=admin123
 
 BROADCAST_DRIVER=log
