migraciones para heroku

--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize",
             "php artisan migrate --force",
+            "php artisan db:seed",
         ]
     },
     "config": {
