--- a/composer.json
+++ b/composer.json
@@ -44,13 +44,15 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate",
-            "@php artisan migrate",
-            "@php artisan db:seed"
+            "@php artisan key:generate"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
+        ],
+        "post-create-project-cmd":[
+            "@php artisan migrate",
+            "@php artisan db:seed"
         ]
     },
     "config": {
